# ousia

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  agents.md  eslint.config.mjs  forge.config.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: codex-integration.md  design-context.md  design.md  development-state.md  extension-runtime.md  performance.md  product-context.md  product-extensions.md  runtime-extensions.md  sentry.md  shadcn-reference.md  streamdown.md  system-extensions-feasibility.md  technical-architecture.md  testing-plan.md
scripts/: generate-latest-json.mjs  mac-build.cjs  make-dmg-notarized.cjs  make-dmg-signed.cjs  make-dmg.cjs  make-mac-release.cjs  package-app.cjs  release-macos.sh  sentry-build-credentials.cjs  sentry-build-verification.cjs
src/: App.tsx  bootstrap.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  paths.rs  rpc.rs  runtime.rs  state.rs  window_chrome.rs
src/app/: app-state.test.ts  app-state.ts  authoritative-state.test.ts  authoritative-state.ts  branch-session-title.test.ts  branch-session-title.ts  chat-event-routing.test.ts  chat-event-routing.ts  chat-history-reconciliation.test.ts  chat-history-reconciliation.ts  (+8 more)
tmp/: bash-tool-icon-options.html
(+194 files in other folders)
